<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="crossline.cl.fragment.controls.RadioButton">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rdbGroup"
        android:layout_above="@+id/btnCheck">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_rdb"
            android:id="@+id/rdbFirst"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_rdb"
            android:id="@+id/rdbSecond"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_rdb"
            android:id="@+id/rdbThird"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_rdb"
            android:id="@+id/rdbFourth"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        android:id="@+id/btnCheck"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
