<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="crossline.cl.fragment.controls.CheckBoxFragment">

    <!-- TODO: Update blank fragment layout -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chb_first"
        android:id="@+id/chbFirst"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chb_second"
        android:id="@+id/chbSecond"
        android:layout_below="@+id/chbFirst"
        android:layout_alignParentLeft="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chb_third"
        android:id="@+id/chbThird"
        android:layout_below="@+id/chbSecond"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chb_fourth"
        android:id="@+id/chbFourth"
        android:layout_below="@+id/chbThird"
        android:layout_alignParentLeft="true"
        android:elegantTextHeight="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        android:id="@+id/btnCheckBox"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
