<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="crossline.cl.fragment.animation.FadeAnimationFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgAnim"
        android:layout_alignParentTop="false"
        android:scaleType="fitXY"
        android:src="@drawable/image1"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_left"
        android:id="@+id/btnLeft"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_top"
        android:id="@+id/btnTop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_right"
        android:id="@+id/btnRight"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgFadeAnim"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_bottom"
        android:id="@+id/btnBottom"
        android:layout_below="@+id/btnTop"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
