<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="crossline.cl.fragment.sqlite.InsertFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/id_name_pet"
                android:id="@+id/textView8"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spIdNamePet"
                android:layout_below="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_name"
                android:id="@+id/textView3"
                android:layout_below="@+id/spIdNamePet"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPetName"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_owner"
                android:id="@+id/textView4"
                android:layout_below="@+id/edtPetName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPetOwner"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_type"
                android:id="@+id/textView5"
                android:layout_below="@+id/edtPetOwner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spTypePet"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_race"
                android:id="@+id/textView6"
                android:layout_below="@+id/spTypePet"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spPetRace"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:id="@+id/btnSubmit"
                android:layout_below="@+id/spPetRace"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
